<resources>
    <string name="app_name">Boilerplate</string>
    <string name="hello_msg_from_activity">Hello From Activity!</string>
    <string name="hello_msg_from_fragment">Hello From Fragment!</string>


    <string name="network_connection_error">Internet connection lost, please retry again</string>
    <string name="network_default_error">Something wrong happened, please retry again</string>
    <string name="network_internal_error">Our systems got an error, please retry again</string>
    <string name="network_server_not_available">Our services are under maintenance, please retry after some time
    </string>
    <string name="server_connection_error">Not able to connect, please retry again</string>
    <string name="network_login_again">Please log in again</string>

    <!--login-->
    <string name="email_field_hint">Enter your email</string>
    <string name="password_field_hint">Enter your password</string>
    <string name="name_field_hint">Enter your name</string>
    <string name="email_field_empty">Email can\'t be empty</string>
    <string name="password_field_empty">Password can\'t be empty</string>
    <string name="name_field_empty">Name can\'t be empty</string>
    <string name="email_field_invalid">Not a valid email</string>
    <string name="password_field_small_length">Password less than 6 digits</string>
    <string name="login_button_text">Login</string>
    <string name="signup_button_text_2">Signup</string>
    <string name="signup_button_text">Need new account?  Signup</string>
    <string name="login_button_text_2">Already have account?  Login</string>
</resources>
